--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "axios": "^1.7.2",
     "element-plus": "^2.7.6",
     "vue": "^3.4.29",
     "vue-router": "^4.0.13"
